fix about me on smaller screen

--- a/less/index.less
+++ b/less/index.less
@@ -188,6 +188,10 @@ header {
 				@media (max-width:500px){
 					line-height: 17px;
 				}
+				@media (max-width: 865px){
+					line-height: 18px;
+				}
+
 				h2 {
 					margin: 10px 0;
 					font-size: 30px;
